backend/Analyzer/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LLAVEDER
    LLAVEIZQ

Grammar

Rule 0     S' -> initial
Rule 1     initial -> instructions
Rule 2     instructions -> instructions instruction
Rule 3     instructions -> instruction
Rule 4     instructionsf -> instructionsf instructionf
Rule 5     instructionsf -> instructionf
Rule 6     instruction -> p_print
Rule 7     instruction -> p_println
Rule 8     instruction -> declaration
Rule 9     instruction -> function
Rule 10    instruction -> callFuncSt
Rule 11    instructionf -> p_print
Rule 12    instructionf -> p_println
Rule 13    instructionf -> declarationf
Rule 14    empty -> <empty>
Rule 15    p_print -> PRINT PARIZQ exp PARDER PTCOMA
Rule 16    p_println -> PRINTLN PARIZQ exp PARDER PTCOMA
Rule 17    declaration -> ID IGUAL exp PTCOMA
Rule 18    declaration -> ID IGUAL exp DOSPT DOSPT typeDef PTCOMA
Rule 19    declarationf -> ID IGUAL exp PTCOMA
Rule 20    declarationf -> GLOBAL ID IGUAL exp PTCOMA
Rule 21    declarationf -> ID IGUAL exp DOSPT DOSPT typeDef PTCOMA
Rule 22    function -> FUNCTION ID parametersFunc blockf
Rule 23    parametersFunc -> PARIZQ parameters PARDER
Rule 24    parametersFunc -> PARIZQ PARDER
Rule 25    parameters -> parameters COMA parameter
Rule 26    parameters -> parameter
Rule 27    parameter -> ID DOSPT DOSPT typeDef
Rule 28    parameter -> ID
Rule 29    callFuncSt -> ID parametersCallFunc PTCOMA
Rule 30    parametersCallFunc -> PARIZQ listValues PARDER
Rule 31    parametersCallFunc -> PARIZQ PARDER
Rule 32    listValues -> listValues COMA exp
Rule 33    listValues -> exp
Rule 34    blockf -> instructionsf END PTCOMA
Rule 35    blockf -> END PTCOMA
Rule 36    decArray -> CORIZQ CORDER
Rule 37    decArray -> empty
Rule 38    exp -> exp MAS exp
Rule 39    exp -> exp MENOS exp
Rule 40    exp -> exp MULTIPLICACION exp
Rule 41    exp -> exp DIVISION exp
Rule 42    exp -> exp POTENCIA exp
Rule 43    exp -> exp MODULO exp
Rule 44    exp -> exp MAYOR exp
Rule 45    exp -> exp MENOR exp
Rule 46    exp -> exp IGUALIGUAL exp
Rule 47    exp -> exp MAYORIGUAL exp
Rule 48    exp -> exp MENORIGUAL exp
Rule 49    exp -> exp DISTINTO exp
Rule 50    exp -> exp ANDD exp
Rule 51    exp -> exp ORR exp
Rule 52    exp -> NOTT exp
Rule 53    exp -> UPPERCASE PARIZQ exp PARDER
Rule 54    exp -> LOWERCASE PARIZQ exp PARDER
Rule 55    exp -> SIN PARIZQ exp PARDER
Rule 56    exp -> COS PARIZQ exp PARDER
Rule 57    exp -> TAN PARIZQ exp PARDER
Rule 58    exp -> SQRT PARIZQ exp PARDER
Rule 59    exp -> LOG10 PARIZQ exp PARDER
Rule 60    exp -> LOG PARIZQ exp COMA exp PARDER
Rule 61    typeDef -> RINT
Rule 62    typeDef -> RFLOAT
Rule 63    typeDef -> RSTRING
Rule 64    typeDef -> RCHAR
Rule 65    typeDef -> RBOOL
Rule 66    exp -> PARIZQ exp PARDER
Rule 67    exp -> ENTERO
Rule 68    exp -> DECIMAL
Rule 69    exp -> STRING
Rule 70    exp -> CHAR
Rule 71    exp -> VERDADERO
Rule 72    exp -> FALSO
Rule 73    exp -> NULO
Rule 74    exp -> ID
Rule 75    exp -> ID listArray
Rule 76    exp -> CORIZQ listValues CORDER
Rule 77    listArray -> listArray CORIZQ exp CORDER
Rule 78    listArray -> CORIZQ exp CORDER

Terminals, with rules where they appear

ANDD                 : 50
CHAR                 : 70
COMA                 : 25 32 60
CORDER               : 36 76 77 78
CORIZQ               : 36 76 77 78
COS                  : 56
DECIMAL              : 68
DISTINTO             : 49
DIVISION             : 41
DOSPT                : 18 18 21 21 27 27
END                  : 34 35
ENTERO               : 67
FALSO                : 72
FUNCTION             : 22
GLOBAL               : 20
ID                   : 17 18 19 20 21 22 27 28 29 74 75
IGUAL                : 17 18 19 20 21
IGUALIGUAL           : 46
LLAVEDER             : 
LLAVEIZQ             : 
LOG                  : 60
LOG10                : 59
LOWERCASE            : 54
MAS                  : 38
MAYOR                : 44
MAYORIGUAL           : 47
MENOR                : 45
MENORIGUAL           : 48
MENOS                : 39
MODULO               : 43
MULTIPLICACION       : 40
NOTT                 : 52
NULO                 : 73
ORR                  : 51
PARDER               : 15 16 23 24 30 31 53 54 55 56 57 58 59 60 66
PARIZQ               : 15 16 23 24 30 31 53 54 55 56 57 58 59 60 66
POTENCIA             : 42
PRINT                : 15
PRINTLN              : 16
PTCOMA               : 15 16 17 18 19 20 21 29 34 35
RBOOL                : 65
RCHAR                : 64
RFLOAT               : 62
RINT                 : 61
RSTRING              : 63
SIN                  : 55
SQRT                 : 58
STRING               : 69
TAN                  : 57
UPPERCASE            : 53
VERDADERO            : 71
error                : 

Nonterminals, with rules where they appear

blockf               : 22
callFuncSt           : 10
decArray             : 
declaration          : 8
declarationf         : 13
empty                : 37
exp                  : 15 16 17 18 19 20 21 32 33 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 53 54 55 56 57 58 59 60 60 66 77 78
function             : 9
initial              : 0
instruction          : 2 3
instructionf         : 4 5
instructions         : 1 2
instructionsf        : 4 34
listArray            : 75 77
listValues           : 30 32 76
p_print              : 6 11
p_println            : 7 12
parameter            : 25 26
parameters           : 23 25
parametersCallFunc   : 29
parametersFunc       : 22
typeDef              : 18 21 27

Parsing method: LALR

state 0

    (0) S' -> . initial
    (1) initial -> . instructions
    (2) instructions -> . instructions instruction
    (3) instructions -> . instruction
    (6) instruction -> . p_print
    (7) instruction -> . p_println
    (8) instruction -> . declaration
    (9) instruction -> . function
    (10) instruction -> . callFuncSt
    (15) p_print -> . PRINT PARIZQ exp PARDER PTCOMA
    (16) p_println -> . PRINTLN PARIZQ exp PARDER PTCOMA
    (17) declaration -> . ID IGUAL exp PTCOMA
    (18) declaration -> . ID IGUAL exp DOSPT DOSPT typeDef PTCOMA
    (22) function -> . FUNCTION ID parametersFunc blockf
    (29) callFuncSt -> . ID parametersCallFunc PTCOMA

    PRINT           shift and go to state 9
    PRINTLN         shift and go to state 10
    ID              shift and go to state 11
    FUNCTION        shift and go to state 12

    initial                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    p_print                        shift and go to state 4
    p_println                      shift and go to state 5
    declaration                    shift and go to state 6
    function                       shift and go to state 7
    callFuncSt                     shift and go to state 8

state 1

    (0) S' -> initial .



state 2

    (1) initial -> instructions .
    (2) instructions -> instructions . instruction
    (6) instruction -> . p_print
    (7) instruction -> . p_println
    (8) instruction -> . declaration
    (9) instruction -> . function
    (10) instruction -> . callFuncSt
    (15) p_print -> . PRINT PARIZQ exp PARDER PTCOMA
    (16) p_println -> . PRINTLN PARIZQ exp PARDER PTCOMA
    (17) declaration -> . ID IGUAL exp PTCOMA
    (18) declaration -> . ID IGUAL exp DOSPT DOSPT typeDef PTCOMA
    (22) function -> . FUNCTION ID parametersFunc blockf
    (29) callFuncSt -> . ID parametersCallFunc PTCOMA

    $end            reduce using rule 1 (initial -> instructions .)
    PRINT           shift and go to state 9
    PRINTLN         shift and go to state 10
    ID              shift and go to state 11
    FUNCTION        shift and go to state 12

    instruction                    shift and go to state 13
    p_print                        shift and go to state 4
    p_println                      shift and go to state 5
    declaration                    shift and go to state 6
    function                       shift and go to state 7
    callFuncSt                     shift and go to state 8

state 3

    (3) instructions -> instruction .

    PRINT           reduce using rule 3 (instructions -> instruction .)
    PRINTLN         reduce using rule 3 (instructions -> instruction .)
    ID              reduce using rule 3 (instructions -> instruction .)
    FUNCTION        reduce using rule 3 (instructions -> instruction .)
    $end            reduce using rule 3 (instructions -> instruction .)


state 4

    (6) instruction -> p_print .

    PRINT           reduce using rule 6 (instruction -> p_print .)
    PRINTLN         reduce using rule 6 (instruction -> p_print .)
    ID              reduce using rule 6 (instruction -> p_print .)
    FUNCTION        reduce using rule 6 (instruction -> p_print .)
    $end            reduce using rule 6 (instruction -> p_print .)


state 5

    (7) instruction -> p_println .

    PRINT           reduce using rule 7 (instruction -> p_println .)
    PRINTLN         reduce using rule 7 (instruction -> p_println .)
    ID              reduce using rule 7 (instruction -> p_println .)
    FUNCTION        reduce using rule 7 (instruction -> p_println .)
    $end            reduce using rule 7 (instruction -> p_println .)


state 6

    (8) instruction -> declaration .

    PRINT           reduce using rule 8 (instruction -> declaration .)
    PRINTLN         reduce using rule 8 (instruction -> declaration .)
    ID              reduce using rule 8 (instruction -> declaration .)
    FUNCTION        reduce using rule 8 (instruction -> declaration .)
    $end            reduce using rule 8 (instruction -> declaration .)


state 7

    (9) instruction -> function .

    PRINT           reduce using rule 9 (instruction -> function .)
    PRINTLN         reduce using rule 9 (instruction -> function .)
    ID              reduce using rule 9 (instruction -> function .)
    FUNCTION        reduce using rule 9 (instruction -> function .)
    $end            reduce using rule 9 (instruction -> function .)


state 8

    (10) instruction -> callFuncSt .

    PRINT           reduce using rule 10 (instruction -> callFuncSt .)
    PRINTLN         reduce using rule 10 (instruction -> callFuncSt .)
    ID              reduce using rule 10 (instruction -> callFuncSt .)
    FUNCTION        reduce using rule 10 (instruction -> callFuncSt .)
    $end            reduce using rule 10 (instruction -> callFuncSt .)


state 9

    (15) p_print -> PRINT . PARIZQ exp PARDER PTCOMA

    PARIZQ          shift and go to state 14


state 10

    (16) p_println -> PRINTLN . PARIZQ exp PARDER PTCOMA

    PARIZQ          shift and go to state 15


state 11

    (17) declaration -> ID . IGUAL exp PTCOMA
    (18) declaration -> ID . IGUAL exp DOSPT DOSPT typeDef PTCOMA
    (29) callFuncSt -> ID . parametersCallFunc PTCOMA
    (30) parametersCallFunc -> . PARIZQ listValues PARDER
    (31) parametersCallFunc -> . PARIZQ PARDER

    IGUAL           shift and go to state 16
    PARIZQ          shift and go to state 18

    parametersCallFunc             shift and go to state 17

state 12

    (22) function -> FUNCTION . ID parametersFunc blockf

    ID              shift and go to state 19


state 13

    (2) instructions -> instructions instruction .

    PRINT           reduce using rule 2 (instructions -> instructions instruction .)
    PRINTLN         reduce using rule 2 (instructions -> instructions instruction .)
    ID              reduce using rule 2 (instructions -> instructions instruction .)
    FUNCTION        reduce using rule 2 (instructions -> instructions instruction .)
    $end            reduce using rule 2 (instructions -> instructions instruction .)


state 14

    (15) p_print -> PRINT PARIZQ . exp PARDER PTCOMA
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp POTENCIA exp
    (43) exp -> . exp MODULO exp
    (44) exp -> . exp MAYOR exp
    (45) exp -> . exp MENOR exp
    (46) exp -> . exp IGUALIGUAL exp
    (47) exp -> . exp MAYORIGUAL exp
    (48) exp -> . exp MENORIGUAL exp
    (49) exp -> . exp DISTINTO exp
    (50) exp -> . exp ANDD exp
    (51) exp -> . exp ORR exp
    (52) exp -> . NOTT exp
    (53) exp -> . UPPERCASE PARIZQ exp PARDER
    (54) exp -> . LOWERCASE PARIZQ exp PARDER
    (55) exp -> . SIN PARIZQ exp PARDER
    (56) exp -> . COS PARIZQ exp PARDER
    (57) exp -> . TAN PARIZQ exp PARDER
    (58) exp -> . SQRT PARIZQ exp PARDER
    (59) exp -> . LOG10 PARIZQ exp PARDER
    (60) exp -> . LOG PARIZQ exp COMA exp PARDER
    (66) exp -> . PARIZQ exp PARDER
    (67) exp -> . ENTERO
    (68) exp -> . DECIMAL
    (69) exp -> . STRING
    (70) exp -> . CHAR
    (71) exp -> . VERDADERO
    (72) exp -> . FALSO
    (73) exp -> . NULO
    (74) exp -> . ID
    (75) exp -> . ID listArray
    (76) exp -> . CORIZQ listValues CORDER

    NOTT            shift and go to state 22
    UPPERCASE       shift and go to state 23
    LOWERCASE       shift and go to state 24
    SIN             shift and go to state 25
    COS             shift and go to state 26
    TAN             shift and go to state 27
    SQRT            shift and go to state 28
    LOG10           shift and go to state 29
    LOG             shift and go to state 30
    PARIZQ          shift and go to state 20
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    STRING          shift and go to state 33
    CHAR            shift and go to state 34
    VERDADERO       shift and go to state 35
    FALSO           shift and go to state 36
    NULO            shift and go to state 37
    ID              shift and go to state 38
    CORIZQ          shift and go to state 39

    exp                            shift and go to state 21

state 15

    (16) p_println -> PRINTLN PARIZQ . exp PARDER PTCOMA
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp POTENCIA exp
    (43) exp -> . exp MODULO exp
    (44) exp -> . exp MAYOR exp
    (45) exp -> . exp MENOR exp
    (46) exp -> . exp IGUALIGUAL exp
    (47) exp -> . exp MAYORIGUAL exp
    (48) exp -> . exp MENORIGUAL exp
    (49) exp -> . exp DISTINTO exp
    (50) exp -> . exp ANDD exp
    (51) exp -> . exp ORR exp
    (52) exp -> . NOTT exp
    (53) exp -> . UPPERCASE PARIZQ exp PARDER
    (54) exp -> . LOWERCASE PARIZQ exp PARDER
    (55) exp -> . SIN PARIZQ exp PARDER
    (56) exp -> . COS PARIZQ exp PARDER
    (57) exp -> . TAN PARIZQ exp PARDER
    (58) exp -> . SQRT PARIZQ exp PARDER
    (59) exp -> . LOG10 PARIZQ exp PARDER
    (60) exp -> . LOG PARIZQ exp COMA exp PARDER
    (66) exp -> . PARIZQ exp PARDER
    (67) exp -> . ENTERO
    (68) exp -> . DECIMAL
    (69) exp -> . STRING
    (70) exp -> . CHAR
    (71) exp -> . VERDADERO
    (72) exp -> . FALSO
    (73) exp -> . NULO
    (74) exp -> . ID
    (75) exp -> . ID listArray
    (76) exp -> . CORIZQ listValues CORDER

    NOTT            shift and go to state 22
    UPPERCASE       shift and go to state 23
    LOWERCASE       shift and go to state 24
    SIN             shift and go to state 25
    COS             shift and go to state 26
    TAN             shift and go to state 27
    SQRT            shift and go to state 28
    LOG10           shift and go to state 29
    LOG             shift and go to state 30
    PARIZQ          shift and go to state 20
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    STRING          shift and go to state 33
    CHAR            shift and go to state 34
    VERDADERO       shift and go to state 35
    FALSO           shift and go to state 36
    NULO            shift and go to state 37
    ID              shift and go to state 38
    CORIZQ          shift and go to state 39

    exp                            shift and go to state 40

state 16

    (17) declaration -> ID IGUAL . exp PTCOMA
    (18) declaration -> ID IGUAL . exp DOSPT DOSPT typeDef PTCOMA
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp POTENCIA exp
    (43) exp -> . exp MODULO exp
    (44) exp -> . exp MAYOR exp
    (45) exp -> . exp MENOR exp
    (46) exp -> . exp IGUALIGUAL exp
    (47) exp -> . exp MAYORIGUAL exp
    (48) exp -> . exp MENORIGUAL exp
    (49) exp -> . exp DISTINTO exp
    (50) exp -> . exp ANDD exp
    (51) exp -> . exp ORR exp
    (52) exp -> . NOTT exp
    (53) exp -> . UPPERCASE PARIZQ exp PARDER
    (54) exp -> . LOWERCASE PARIZQ exp PARDER
    (55) exp -> . SIN PARIZQ exp PARDER
    (56) exp -> . COS PARIZQ exp PARDER
    (57) exp -> . TAN PARIZQ exp PARDER
    (58) exp -> . SQRT PARIZQ exp PARDER
    (59) exp -> . LOG10 PARIZQ exp PARDER
    (60) exp -> . LOG PARIZQ exp COMA exp PARDER
    (66) exp -> . PARIZQ exp PARDER
    (67) exp -> . ENTERO
    (68) exp -> . DECIMAL
    (69) exp -> . STRING
    (70) exp -> . CHAR
    (71) exp -> . VERDADERO
    (72) exp -> . FALSO
    (73) exp -> . NULO
    (74) exp -> . ID
    (75) exp -> . ID listArray
    (76) exp -> . CORIZQ listValues CORDER

    NOTT            shift and go to state 22
    UPPERCASE       shift and go to state 23
    LOWERCASE       shift and go to state 24
    SIN             shift and go to state 25
    COS             shift and go to state 26
    TAN             shift and go to state 27
    SQRT            shift and go to state 28
    LOG10           shift and go to state 29
    LOG             shift and go to state 30
    PARIZQ          shift and go to state 20
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    STRING          shift and go to state 33
    CHAR            shift and go to state 34
    VERDADERO       shift and go to state 35
    FALSO           shift and go to state 36
    NULO            shift and go to state 37
    ID              shift and go to state 38
    CORIZQ          shift and go to state 39

    exp                            shift and go to state 41

state 17

    (29) callFuncSt -> ID parametersCallFunc . PTCOMA

    PTCOMA          shift and go to state 42


state 18

    (30) parametersCallFunc -> PARIZQ . listValues PARDER
    (31) parametersCallFunc -> PARIZQ . PARDER
    (32) listValues -> . listValues COMA exp
    (33) listValues -> . exp
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp POTENCIA exp
    (43) exp -> . exp MODULO exp
    (44) exp -> . exp MAYOR exp
    (45) exp -> . exp MENOR exp
    (46) exp -> . exp IGUALIGUAL exp
    (47) exp -> . exp MAYORIGUAL exp
    (48) exp -> . exp MENORIGUAL exp
    (49) exp -> . exp DISTINTO exp
    (50) exp -> . exp ANDD exp
    (51) exp -> . exp ORR exp
    (52) exp -> . NOTT exp
    (53) exp -> . UPPERCASE PARIZQ exp PARDER
    (54) exp -> . LOWERCASE PARIZQ exp PARDER
    (55) exp -> . SIN PARIZQ exp PARDER
    (56) exp -> . COS PARIZQ exp PARDER
    (57) exp -> . TAN PARIZQ exp PARDER
    (58) exp -> . SQRT PARIZQ exp PARDER
    (59) exp -> . LOG10 PARIZQ exp PARDER
    (60) exp -> . LOG PARIZQ exp COMA exp PARDER
    (66) exp -> . PARIZQ exp PARDER
    (67) exp -> . ENTERO
    (68) exp -> . DECIMAL
    (69) exp -> . STRING
    (70) exp -> . CHAR
    (71) exp -> . VERDADERO
    (72) exp -> . FALSO
    (73) exp -> . NULO
    (74) exp -> . ID
    (75) exp -> . ID listArray
    (76) exp -> . CORIZQ listValues CORDER

    PARDER          shift and go to state 44
    NOTT            shift and go to state 22
    UPPERCASE       shift and go to state 23
    LOWERCASE       shift and go to state 24
    SIN             shift and go to state 25
    COS             shift and go to state 26
    TAN             shift and go to state 27
    SQRT            shift and go to state 28
    LOG10           shift and go to state 29
    LOG             shift and go to state 30
    PARIZQ          shift and go to state 20
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    STRING          shift and go to state 33
    CHAR            shift and go to state 34
    VERDADERO       shift and go to state 35
    FALSO           shift and go to state 36
    NULO            shift and go to state 37
    ID              shift and go to state 38
    CORIZQ          shift and go to state 39

    listValues                     shift and go to state 43
    exp                            shift and go to state 45

state 19

    (22) function -> FUNCTION ID . parametersFunc blockf
    (23) parametersFunc -> . PARIZQ parameters PARDER
    (24) parametersFunc -> . PARIZQ PARDER

    PARIZQ          shift and go to state 47

    parametersFunc                 shift and go to state 46

state 20

    (66) exp -> PARIZQ . exp PARDER
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp POTENCIA exp
    (43) exp -> . exp MODULO exp
    (44) exp -> . exp MAYOR exp
    (45) exp -> . exp MENOR exp
    (46) exp -> . exp IGUALIGUAL exp
    (47) exp -> . exp MAYORIGUAL exp
    (48) exp -> . exp MENORIGUAL exp
    (49) exp -> . exp DISTINTO exp
    (50) exp -> . exp ANDD exp
    (51) exp -> . exp ORR exp
    (52) exp -> . NOTT exp
    (53) exp -> . UPPERCASE PARIZQ exp PARDER
    (54) exp -> . LOWERCASE PARIZQ exp PARDER
    (55) exp -> . SIN PARIZQ exp PARDER
    (56) exp -> . COS PARIZQ exp PARDER
    (57) exp -> . TAN PARIZQ exp PARDER
    (58) exp -> . SQRT PARIZQ exp PARDER
    (59) exp -> . LOG10 PARIZQ exp PARDER
    (60) exp -> . LOG PARIZQ exp COMA exp PARDER
    (66) exp -> . PARIZQ exp PARDER
    (67) exp -> . ENTERO
    (68) exp -> . DECIMAL
    (69) exp -> . STRING
    (70) exp -> . CHAR
    (71) exp -> . VERDADERO
    (72) exp -> . FALSO
    (73) exp -> . NULO
    (74) exp -> . ID
    (75) exp -> . ID listArray
    (76) exp -> . CORIZQ listValues CORDER

    NOTT            shift and go to state 22
    UPPERCASE       shift and go to state 23
    LOWERCASE       shift and go to state 24
    SIN             shift and go to state 25
    COS             shift and go to state 26
    TAN             shift and go to state 27
    SQRT            shift and go to state 28
    LOG10           shift and go to state 29
    LOG             shift and go to state 30
    PARIZQ          shift and go to state 20
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    STRING          shift and go to state 33
    CHAR            shift and go to state 34
    VERDADERO       shift and go to state 35
    FALSO           shift and go to state 36
    NULO            shift and go to state 37
    ID              shift and go to state 38
    CORIZQ          shift and go to state 39

    exp                            shift and go to state 48

state 21

    (15) p_print -> PRINT PARIZQ exp . PARDER PTCOMA
    (38) exp -> exp . MAS exp
    (39) exp -> exp . MENOS exp
    (40) exp -> exp . MULTIPLICACION exp
    (41) exp -> exp . DIVISION exp
    (42) exp -> exp . POTENCIA exp
    (43) exp -> exp . MODULO exp
    (44) exp -> exp . MAYOR exp
    (45) exp -> exp . MENOR exp
    (46) exp -> exp . IGUALIGUAL exp
    (47) exp -> exp . MAYORIGUAL exp
    (48) exp -> exp . MENORIGUAL exp
    (49) exp -> exp . DISTINTO exp
    (50) exp -> exp . ANDD exp
    (51) exp -> exp . ORR exp

    PARDER          shift and go to state 49
    MAS             shift and go to state 50
    MENOS           shift and go to state 51
    MULTIPLICACION  shift and go to state 52
    DIVISION        shift and go to state 53
    POTENCIA        shift and go to state 54
    MODULO          shift and go to state 55
    MAYOR           shift and go to state 56
    MENOR           shift and go to state 57
    IGUALIGUAL      shift and go to state 58
    MAYORIGUAL      shift and go to state 59
    MENORIGUAL      shift and go to state 60
    DISTINTO        shift and go to state 61
    ANDD            shift and go to state 62
    ORR             shift and go to state 63


state 22

    (52) exp -> NOTT . exp
    (38) exp -> . exp MAS exp
    (39) exp -> . exp MENOS exp
    (40) exp -> . exp MULTIPLICACION exp
    (41) exp -> . exp DIVISION exp
    (42) exp -> . exp POTENCIA exp
    (43) exp -> . exp MODULO exp
    (44) exp -> . exp MAYOR exp
    (45) exp -> . exp MENOR exp
    (46) exp -> . exp IGUALIGUAL exp
    (47) exp -> . exp MAYORIGUAL exp
    (48) exp -> . exp MENORIGUAL exp
    (49) exp -> . exp DISTINTO exp
    (50) exp -> . exp ANDD exp
    (51) exp -> . exp ORR exp
    (52) exp -> . NOTT exp
    (53) exp -> . UPPERCASE PARIZQ exp PARDER
    (54) exp -> . LOWERCASE PARIZQ exp PARDER
    (55) exp -> . SIN PARIZQ exp PARDER
    (56) exp -> . COS PARIZQ exp PARDER
    (57) exp -> . TAN PARIZQ exp PARDER
    (58) exp -> . SQRT PARIZQ exp PARDER
    (59) exp -> . LOG10 PARIZQ exp PARDER
    (60) exp -> . LOG PARIZQ exp COMA exp PARDER
    (66) exp -> . PARIZQ exp PARDER
    (67) exp -> . ENTERO
    (68) exp -> . DECIMAL
    (69) exp -> . STRING
    (70) exp -> . CHAR
    (71) exp -> . VERDADERO
    (72) exp -> . FALSO
    (73) exp -> . NULO
    (74) exp -> . ID
    (75) exp -> . ID listArray
    (76) exp -> . CORIZQ listValues CORDER

    NOTT            shift and go to state 22
    UPPERCASE       shift and go to state 23
    LOWERCASE       shift and go to state 24
    SIN             shift and go to state 25
    COS             shift and go to state 26
    TAN             shift and go to state 27
    SQRT            shift and go to state 28
    LOG10           shift and go to state 29
    LOG             shift and go to state 30
    PARIZQ          shift and go to state 20
    ENTERO          shift and go to state 31
    DECIMAL         shift and go to state 32
    STRING          shift and go to state 33
    CHAR            shift and go to state 34
    VERDADERO       shift and go to state 35
    FALSO           shift and go to state 36
    NULO            shift and go to state 37
    ID              shift and go to state 38
    CORIZQ          shift and go to state 39

    exp                            shift and go to state 64

state 23

    (53) exp -> UPPERCASE . PARIZQ exp PARDER

    PARIZQ          shift and go to state 65


state 24

    (54) exp -> LOWERCASE . PARIZQ exp PARDER

    PARIZQ          shift and go to state 66


state 25

    (55) exp -> SIN . PARIZQ exp PARDER

    PARIZQ          shift and go to state 67


state 26

    (56) exp -> COS . PARIZQ exp PARDER

    PARIZQ          shift and go to state 68


state 27

    (57) exp -> TAN . PARIZQ exp PARDER

    PARIZQ          shift and go to state 69


state 28

    (58) exp -> SQRT . PARIZQ exp PARDER

    PARIZQ          shift and go to state 70


state 29

    (59) exp -> LOG10 . PARIZQ exp PARDER

    PARIZQ          shift and go to state 71


state 30

    (60) exp -> LOG . PARIZQ exp COMA exp PARDER

    PARIZQ          shift and go to state 72


state 31

    (67) exp -> ENTERO .

    PARDER          reduce using rule 67 (exp -> ENTERO .)
    MAS             reduce using rule 67 (exp -> ENTERO .)
    MENOS           reduce using rule 67 (exp -> ENTERO .)
    MULTIPLICACION  reduce using rule 67 (exp -> ENTERO .)
    DIVISION        reduce using rule 67 (exp -> ENTERO .)
    POTENCIA        reduce using rule 67 (exp -> ENTERO .)
    MODULO          reduce using rule 67 (exp -> ENTERO .)
    MAYOR           reduce using rule 67 (exp -> ENTERO .)
    MENOR           reduce using rule 67 (exp -> ENTERO .)
    IGUALIGUAL      reduce using rule 67 (exp -> ENTERO .)
    MAYORIGUAL      reduce using rule 67 (exp -> ENTERO .)
    MENORIGUAL      reduce using rule 67 (exp -> ENTERO .)
    DISTINTO        reduce using rule 67 (exp -> ENTERO .)
    ANDD            reduce using rule 67 (exp -> ENTERO .)
    ORR             reduce using rule 67 (exp -> ENTERO .)
    PTCOMA          reduce using rule 67 (exp -> ENTERO .)
    DOSPT           reduce using rule 67 (exp -> ENTERO .)
    COMA            reduce using rule 67 (exp -> ENTERO .)
    CORDER          reduce using rule 67 (exp -> ENTERO .)


state 32

    (68) exp -> DECIMAL .

    PARDER          reduce using rule 68 (exp -> DECIMAL .)
    MAS             reduce using rule 68 (exp -> DECIMAL .)
    MENOS           reduce using rule 68 (exp -> DECIMAL .)
    MULTIPLICACION  reduce using rule 68 (exp -> DECIMAL .)
    DIVISION        reduce using rule 68 (exp -> DECIMAL .)
    POTENCIA        reduce using rule 68 (exp -> DECIMAL .)
    MODULO          reduce using rule 68 (exp -> DECIMAL .)
    MAYOR           reduce using rule 68 (exp -> DECIMAL .)
    MENOR           reduce using rule 68 (exp -> DECIMAL .)
    IGUALIGUAL      reduce using rule 68 (exp -> DECIMAL .)
    MAYORIGUAL      reduce using rule 68 (exp -> DECIMAL .)
    MENORIGUAL      reduce using rule 68 (exp -> DECIMAL .)
    DISTINTO        reduce using rule 68 (exp -> DECIMAL .)
    ANDD            reduce using rule 68 (exp -> DECIMAL .)
    ORR             reduce using rule 68 (exp -> DECIMAL .)
    PTCOMA          reduce using rule 68 (exp -> DECIMAL .)
    DOSPT           reduce using rule 68 (exp -> DECIMAL .)
    COMA            reduce using rule 68 (exp -> DECIMAL .)
    CORDER          reduce using rule 68 (exp -> DECIMAL .)


state 33

    (69) exp -> STRING .

    PARDER          reduce using rule 69 (exp -> STRING .)
    MAS             reduce using rule 69 (exp -> STRING .)
    MENOS           reduce using rule 69 (exp -> STRING .)
    MULTIPLICACION  reduce using rule 69 (exp -> STRING .)
    DIVISION        reduce using rule 69 (exp -> STRING .)
    POTENCIA        reduce using rule 69 (exp -> STRING .)
    MODULO          reduce using rule 69 (exp -> STRING .)
    MAYOR           reduce using rule 69 (exp -> STRING .)
    MENOR           reduce using rule 69 (exp -> STRING .)
    IGUALIGUAL      reduce using rule 69 (exp -> STRING .)
    MAYORIGUAL      reduce using rule 69 (exp -> STRING .)
    MENORIGUAL      reduce using rule 69 (exp -> STRING .)
    DISTINTO        reduce using rule 69 (exp -> STRING .)
    ANDD            reduce using rule 69 (exp -> STRING .)
    ORR             reduce using rule 69 (exp -> STRING .)
    PTCOMA          reduce using rule 69 (exp -> STRING .)
    DOSPT           reduce using rule 69 (exp -> STRING .)
    COMA            reduce using rule 69 (exp -> STRING .)
    CORDER          reduce using rule 69 (exp -> STRING .)


state 34

    (70) exp -> CHAR .
